# SPHSimulation

./: .gitignore  QUICKSTART.md  README.md  environment.yml  flake.nix  pyproject.toml  requirements.txt  setup.bat  setup.sh
1/: sodshock.py  sodshock_leg.py  sodshock_leg2.py
2/: planets.py  planets_2400_dx1_250000000_dv1_1000000_dx2_250000000_dv2_1000000.csv  planets_2400_dx1_250000000_dv1_4000000_dx2_250000000_dv2_4000000.csv  planets_2400_dx1_250000000_dxx1_125000000_dv1_4000000_dx2_250000000_dv2_4000000.csv  planets_300_dx1_200000000_dvx1_400000_dvy1_350000_dx2_200000000.csv  planets_300_dx1_250000000_dvx1_4000000_dvy1_2000000_dx2_250000000.csv  planets_300_dx1_250000000_dvx1_4000000_dvy1_3500000_dx2_250000000.csv  planets_600_dx1_0_dvx1_10000_dvy1_2500_dx2_150000000.csv  planets_600_dx1_0_dvx1_10000_dvy1_4000_dx2_150000000.csv  planets_600_dx1_0_dvx1_10000_dvy1_6000_dx2_150000000.csv  planets_600_dx1_0_dvx1_50000_dvy1_40000_dx2_150000000.csv  planets_600_dx1_0_dvx1_5000_dvy1_4000_dx2_100000000.csv  planets_600_dx1_0_dvx1_5000_dvy1_4000_dx2_150000000.csv  planets_600_dx1_0_dvx1_9000_dvy1_7000_dx2_100000000.csv  planets_600_dx1_100000000_dvx1_100000_dvy1_75000_dx2_100000000.csv  planets_600_dx1_100000000_dvx1_200000_dvy1_175000_dx2_100000000.csv  planets_600_dx1_200000000_dvx1_400000_dvy1_375000_dx2_200000000.csv  planets_600_dx1_250000000_dv1_1000000_dx2_250000000_dv2_1000000.csv.npy  planets_history_2_planets_move_dx1_100000000_dv1_10000_dx2_100000000_dv2_10000.csv.npy  planets_history_2_planets_move_dx1_200000000_dv1_1000000_dx2_200000000_dv2_1000000.csv.npy  (+1 more)
