[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sph-simulation"
version = "1.0.0"
description = "A collection of Smoothed Particle Hydrodynamics (SPH) simulations implemented in Python"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "SPH Simulation Project"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "scipy>=1.10.0",
    "moviepy>=1.0.3",
    "ffmpeg-python>=0.2.0",
]

[project.urls]
Repository = "https://github.com/FreaxMATE/SPHSimulation"